--- a/static/index.html
+++ b/static/index.html
@@ -1,187 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Phone Number Lookup</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        :root {
-            --primary: #007bff;
-            --primary-dark: #0056b3;
-            --bg: #f9f9f9;
-            --container-bg: #fff;
-            --shadow: 0 4px 16px rgba(0,0,0,0.08);
-            --border-radius: 16px;
-            --input-bg: #f5f7fa;
-            --input-border: #d1d5db;
-            --result-bg: #f2f6fa;
-            --error: #e74c3c;
-        }
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            background: var(--bg);
-            margin: 0;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .container {
-            background: var(--container-bg);
-            padding: 32px 24px;
-            border-radius: var(--border-radius);
-            box-shadow: var(--shadow);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-            transition: box-shadow 0.2s;
-        }
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 18px;
-            color: var(--primary-dark);
-            font-weight: 600;
-            letter-spacing: 0.5px;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 12px 14px;
-            margin-bottom: 14px;
-            border-radius: 8px;
-            border: 1px solid var(--input-border);
-            background: var(--input-bg);
-            font-size: 1rem;
-            transition: border-color 0.2s;
-            outline: none;
-            box-sizing: border-box;
-        }
-        input[type="text"]:focus {
-            border-color: var(--primary);
-        }
-        button {
-            padding: 12px 24px;
-            background: var(--primary);
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 1rem;
-            font-weight: 500;
-            letter-spacing: 0.2px;
-            transition: background 0.2s;
-            box-shadow: 0 2px 8px rgba(0,123,255,0.08);
-        }
-        button:hover, button:focus {
-            background: var(--primary-dark);
-        }
-        .disclaimer {
-            margin-top: 12px;
-            font-size: 0.8rem;
-            color: #555;
-            background: #fff3cd;
-            border: 1px solid #ffeeba;
-            padding: 8px 10px;
-            border-radius: 6px;
-            text-align: center;
-        }
-        .result {
-            margin-top: 20px;
-            text-align: left;
-            font-size: 1rem;
-            word-break: break-word;
-        }
-        .result p {
-            margin: 8px 0;
-            padding: 10px 12px;
-            background: var(--result-bg);
-            border-radius: 8px;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.03);
-            font-size: 0.97rem;
-        }
-        .result p b {
-            color: var(--primary-dark);
-        }
-        .result .error {
-            color: var(--error);
-            background: #fff0f0;
-            border: 1px solid #f5c6cb;
-        }
-        @media (max-width: 600px) {
-            .container {
-                padding: 20px 8px;
-                max-width: 98vw;
-            }
-            h1 {
-                font-size: 1.3rem;
-            }
-            input[type="text"], button {
-                font-size: 0.97rem;
-                padding: 10px 10px;
-            }
-            .result p {
-                font-size: 0.95rem;
-                padding: 8px 8px;
-            }
-        }
-        @media (max-width: 400px) {
-            .container {
-                padding: 12px 2px;
-            }
-            h1 {
-                font-size: 1.1rem;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Phone Number Location Finder</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Phone Number Lookup</h1>
-        <input type="text" id="phone" placeholder="Enter phone number e.g. +919898989898" autocomplete="off">
-        <button onclick="lookupPhone()">Lookup</button>
-
-        <!-- Disclaimer -->
-        <div class="disclaimer">
-            ⚠️ This tool is for <b>personal use only</b>. Do not use it for public or commercial purposes. 
-            Public usage may be <b>illegal</b>.
-        </div>
-
-        <div class="result" id="result"></div>
-    </div>
-
-    <script>
-        async function lookupPhone() {
-            const phone = document.getElementById("phone").value.trim();
-            const resultDiv = document.getElementById("result");
-            resultDiv.innerHTML = "<p>Fetching details...</p>";
-
-            try {
-                const response = await fetch("https://phone-number-location-finder.onrender.com/api/phone", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ phone }),
-                });
-
-                const data = await response.json();
-
-                if (data.error) {
-                    resultDiv.innerHTML = `<p class="error"><b>Error:</b> ${data.error}</p>`;
-                    return;
-                }
-
-                resultDiv.innerHTML = `
-                    <p><b>Country:</b> ${data.country || '-'}</p>
-                    <p><b>Region/Area:</b> ${data.region || '-'}</p>
-                    <p><b>Carrier:</b> ${data.carrier || '-'}</p>
-                    <p><b>Line Type:</b> ${data.line_type || '-'}</p>
-                    <p><b>Timezone:</b> ${data.timezone || '-'}</p>
-                    <p><b>Formatted Number:</b> ${data.formatted_number || '-'}</p>
-                    <p><b>Country Code:</b> ${data.country_code || '-'}</p>
-                    <p><b>Validity:</b> ${data.validity || '-'}</p>
-                `;
-            } catch (err) {
-                resultDiv.innerHTML = `<p class="error"><b>Failed to fetch data.</b></p>`;
-            }
-        }
-    </script>
+  <div class="container">
+    <h1>📱 Phone Number Location Finder</h1>
+    <input type="text" id="phoneInput" placeholder="Enter phone number (e.g. +919712352429)">
+    <button onclick="getInfo()">Find Location</button>
+    <pre id="result"></pre>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
